fix(boot): Fixed broken css?

--- a/css/dos.css
+++ b/css/dos.css
@@ -27,7 +27,8 @@
 
 html, body {
     width: 100%;
-    height: 100%
+    height: 100%;
+    overflow: hidden;
 }
 
 .dos-window {
